Añadido boton reinicio, contador moviminetos, y cambiar el alert de Empate por cambiar partida, y actualizado css

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<div class="game" id="contenedor"></div>
 		<img class="logo" alt="descripcion" src="images/logo.gif" />
 		<script type="text/javascript" src="src/build/index.js"></script>
+		<footer>
+					Félix Mezo Gómez - <i>felix.mezog@alumnos.upm.es</i>
+				</footer>
 	</body>
 
 
